tests/auto_generated/AUL2-841_auto.spec.ts
// Auto-generado por Agente 2.0 con contexto Angular
// Issue: AUL2-841 - Fecha: 2025-08-01 15:02:00.628758

import { test, expect } from '@playwright/test';
import { config } from 'dotenv';
config();
import { LoginPage } from '../../pages/login.page';

test.describe('AUL2-841 - Casos generados', () => {
  test.beforeEach(async ({ page }) => {
    const loginPage = new LoginPage(page);
    await loginPage.goto();
    await loginPage.login(process.env.USERNAME!, process.env.PASSWORD!);
  });

  test('Editar información general de espacio', async ({ page }) => {
    // TODO: 1
    // TODO:  Acceder a la sección de Gestión de Espacios desde el menú principal
    // TODO:  2
    // TODO:  Seleccionar un espacio existente y elegir la opción Editar
    // TODO:  3
    // TODO:  Modificar alguno de los campos editables del formulario de edición
    // TODO:  4
    // TODO:  Hacer clic en Guardar Cambios
    // TODO:  5
    // TODO:  Verificar que se muestra un mensaje de éxito y se retorna al listado actualizado
    // Validación esperada: El usuario puede editar la información general de un espacio registrado y guardar los cambios correctamente.
  });

  test('Editar información general de espacio con reservas vinculadas', async ({ page }) => {
    // TODO: 1
    // TODO:  Acceder a la sección de Gestión de Espacios desde el menú principal
    // TODO:  2
    // TODO:  Seleccionar un espacio existente con reservas vinculadas y elegir la opción Editar
    // TODO:  3
    // TODO:  Modificar alguno de los campos editables del formulario de edición
    // TODO:  4
    // TODO:  Hacer clic en Guardar Cambios
    // TODO:  5
    // TODO:  Verificar que el botón de edición está deshabilitado o la acción bloqueada según la regla de negocio
    // Validación esperada: El usuario no puede editar la información general de un espacio registrado si tiene reservas vinculadas.
  });

  test('Editar información general de espacio sin acceso como Secretaría o Superadmin', async ({ page }) => {
    // TODO: 1
    // TODO:  Acceder a la sección de Gestión de Espacios desde el menú principal
    // TODO:  2
    // TODO:  Seleccionar un espacio existente y elegir la opción Editar
    // TODO:  3
    // TODO:  Verificar que el formulario de edición no se muestra
    // Validación esperada: El usuario no puede acceder a la sección de edición de información general de un espacio registrado si no es Secretaría o Superadmin.
  });

  test('Editar información general de espacio sin campos editables', async ({ page }) => {
    // TODO: 1
    // TODO:  Acceder a la sección de Gestión de Espacios desde el menú principal
    // TODO:  2
    // TODO:  Seleccionar un espacio existente y elegir la opción Editar
    // TODO:  3
    // TODO:  Verificar que los campos del formulario de edición no sean editables
    // Validación esperada: El usuario no puede editar la información general de un espacio registrado si no tiene campos editables.
  });

  test('Editar información general de espacio sin guardar cambios', async ({ page }) => {
    // TODO: 1
    // TODO:  Acceder a la sección de Gestión de Espacios desde el menú principal
    // TODO:  2
    // TODO:  Seleccionar un espacio existente y elegir la opción Editar
    // TODO:  3
    // TODO:  Modificar alguno de los campos editables del formulario de edición
    // TODO:  4
    // TODO:  Cerrar o cancelar la edición sin guardar cambios
    // TODO:  5
    await page.locator('[placeholder='ID']').click(); // id
    // Validación esperada: El usuario debe mostrar un modal de confirmación de pérdida de cambios antes de cerrar o cancelar la edición sin guardar cambios.
  });

  test('Editar información general de espacio con campos no válidos', async ({ page }) => {
    // TODO: 1
    // TODO:  Acceder a la sección de Gestión de Espacios desde el menú principal
    // TODO:  2
    // TODO:  Seleccionar un espacio existente y elegir la opción Editar
    // TODO:  3
    await page.locator('[placeholder='ID']').click(); // id
    // TODO:  4
    // TODO:  Hacer clic en Guardar Cambios
    // TODO:  5
    await page.locator('.error').click(); // error
    // Validación esperada: El usuario debe mostrar un mensaje de error al intentar editar campos con valores no válidos.
  });

});
